--- a/web/css/swype.css
+++ b/web/css/swype.css
@@ -2,13 +2,16 @@ html, body
 {
     background-color: #F5F5F5;
 }
+.container-fluid
+{
+    padding:0;
+}
 .swype-nav
 {
     text-align:center;
     padding:10px;
     position: fixed;
     top: 0;
-
 }
 .swype-nav-bg
 {
@@ -32,20 +35,14 @@ html, body
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     background-color: #FFF;
-
-    width:100%;
-    max-width:450px;
     min-height:300px;
     margin:10px;
     padding:10px;
     float:left;
     display:block;
-
-    margin-right: 450px;
 }
 .swype-panel:first-child
 {
-    margin-left: 450px;
 }
 .swype-image-thumb
 {
