wow duplicate code but smoother!

--- a/web/css/swype.css
+++ b/web/css/swype.css
@@ -27,7 +27,7 @@ html, body
 {
     width:10000px;
     position:relative;
-    background-color:#666;
+    background-color:#F5F5F5;
     height:600px;
 }
 .swype-panel
